PROBLEMA:
Sistema de Exceptions em regras opcionais (que podem ser 'vazias'). O método getNextToken
do SystaxManager (antes chamado de TokenizedCodeManager) é o método que emite erros caso não
encontre o token que está procurando. Porém quando o getNextToken é chamado de dentro de uma regra
opcional, o erro é capturado pelo block catch para que regras opcionais não dêem erro.
O problema é que na regra principal (regra INICIO) as duas ultimas regras são opcionais.
A regra é: (INICIO -> Especialidade  String  String  LISTA_DE_QUESTOES  LISTA_DE_TESTES)
Isso evidencia o problema de que nesse caso um erro nunca será emitido. O compilador vai passar
pelo erro, identificar, mas como é opcional não vai emitir e a interpretação das regras vai
finalizar com sucesso.


SOLUÇÃO MELHOR:
- Remover o SyntaxManager de ser passado como parâmetro
- Remover o SyntaxManager.optionalRule() : SM será criado dentro das regras mas de forma normal:
SyntaxManager sm = new SyntaxManager()
- Remover sistema de stackLevel

A solução consiste em simplesmente:
Todas as regras exceto a inicial irão executar seus códigos dentro de um bloco try-catch.
No bloco catch sempre vai ser chamado sm.resetRulePointer() para que caso a regra falhe, o 
ponteiro da lista de token retorne ao indice onde estava antes da regra iniciar.
Abaixo desse comando, CASO a regra NÃO seja opcional, será chamado:
  sm.rethrowSavedExceptionFromCatchBlock()
Esse método, do SyntaxManager, irá então reemitir o erro que estiver salvo. Ou seja, sempre que
ocorrer um erro em uma regra não-opcional ele será capturado e em seu lugar será emitido o erro que
foi salvo. Ou seja o erro salvo sempre será emitido quando acontecer um erro. E como a regra inicial
não é opcional, quando ela acabar de executar alguma regra opcional que tenha chamado: BUM! o erro
emitido terá chegado a um nível de execução que não tem catch, e irá finalmente aparecer.
Perfeito sem precisar de geringonças!
