@@ -1,12 +1,9 @@
 package ledski.askbot.parser.rules;
 
 import static ledski.askbot.lexer.Token.TokenType.*;
-
-import java.util.List;
-
+import ledski.askbot.parser.CompilerExceptions.*;
 import ledski.askbot.parser.GrammarRule;
 import ledski.askbot.parser.SyntaxManager;
-import ledski.askbot.parser.CompilerExceptions.*;
 
 /**
  * Regra:
@@ -16,24 +13,24 @@ public class Especialidade extends GrammarRule {
 	
 	public String name;
 	public String description;
-	public List<Questao> listaDeQuestoes;
-	public List<Teste> listaDeTestes;
+
 	
 	public Especialidade() throws Exception, NotAToken, UnexpectedToken, UnfinishedCode {
 		SyntaxManager sm = new SyntaxManager();
 		
+		try {
+			sm.getNextToken( _Especialidade );
+			sm.getNextToken( _doisPontos );			
+			name = sm.getNextToken( _String ).lexema;
+			description = sm.getNextToken( _String ).lexema;
+		}
+		catch( UnexpectedToken e ) {
+			sm.resetRulePointer();
+			sm.rethrowSavedExceptionFromCatchBlock();
+		}
 		
-		sm.getNextToken( _Especialidade );
-		sm.getNextToken( _doisPontos );
-		
-		name = sm.getNextToken( _String ).lexema;
-		description = sm.getNextToken( _String ).lexema;
 
-		listaDeQuestoes = new ListaDeQuestoes().listaDeQuestoes;
-		
-		listaDeTestes = new ListaDeTestes().listaDeTestes;
-		
-		sm.throwSavedExceptionAtTheEndOfStartRule();
+
 	}
 
 }
